force-app/main/default/objects/Chuzo_Settings__c/fields/Chuzo_Manual_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Chuzo_Manual_File_URL__c</fullName>
    <description>URL to populate the ‘Need Help?’ hyperlink in the Chuzo application. (PER-2248)</description>
    <label>Chuzo Manual - File URL</label>
    <type>Url</type>
</CustomField>