force-app/main/default/objects/Chuzo_Settings__c/fields/DTV_Bolt_On_Project__c.field-meta.xml
<CustomField>
    <fullName>DTV_Bolt_On_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[PER-5261] Bolt On Project</description>
    <label>DTV Bolt On Project</label>
    <type>Checkbox</type>
</CustomField>