force-app/main/default/objects/Chuzo_Settings__c/fields/DTV_FTC_Project__c.field-meta.xml
<CustomField>
    <fullName>DTV_FTC_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[PER-4934]</description>
    <label>DTV FTC Project</label>
    <type>Checkbox</type>
</CustomField>