force-app/main/default/objects/Chuzo_Settings__c/fields/DTV_Naming_Project__c.field-meta.xml
<CustomField>
    <fullName>DTV_Naming_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Naming change for Via Satellite and Via Internet [PER-5578]</description>
    <label>DTV Naming Project</label>
    <type>Checkbox</type>
</CustomField>