force-app/main/default/objects/Chuzo_Settings__c/fields/DTV_Popup_Project__c.field-meta.xml
<CustomField>
    <fullName>DTV_Popup_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that triggers DTV Via Satellite Restriction check based on Zip Code [PER-5336]</description>
    <label>DTV Popup Project</label>
    <type>Checkbox</type>
</CustomField>