force-app/main/default/objects/Chuzo_Settings__c/fields/DTV_Remove_Pass_Project__c.field-meta.xml
<CustomField>
    <fullName>DTV_Remove_Pass_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[PER-5038]</description>
    <label>DTV Remove Pass Project</label>
    <type>Checkbox</type>
</CustomField>