force-app/main/default/objects/Chuzo_Settings__c/fields/DTV_Sport_Reward_Card_Project__c.field-meta.xml
<CustomField>
    <fullName>DTV_Sport_Reward_Card_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sports Request Reward Card [PER-5008]</description>
    <label>DTV Sport Reward Card Project</label>
    <type>Checkbox</type>
</CustomField>