force-app/main/default/objects/Chuzo_Settings__c/fields/ReCaptcha_Minimum_Acceptable_Score__c.field-meta.xml
<CustomField>
    <fullName>ReCaptcha_Minimum_Acceptable_Score__c</fullName>
    <description>Specifies the minimum score to pass the reCAPTCHA v3 validation. (PER-5694)</description>
    <label>ReCaptcha Minimum Acceptable Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>